src/snapshots/cronexpr__parser__tests__crontab_guru_examples-39.snap
---
source: src/parser.rs
expression: "parse_crontab(\"0 0 1 */6 * UTC\").unwrap()"
---
Crontab {
    minutes: PossibleLiterals {
        values: {
            0,
        },
    },
    hours: PossibleLiterals {
        values: {
            0,
        },
    },
    months: PossibleLiterals {
        values: {
            1,
            7,
        },
    },
    days_of_month: ParsedDaysOfMonth {
        literals: {
            1,
        },
        last_day_of_month: false,
        nearest_weekdays: {},
        start_with_asterisk: false,
    },
    days_of_week: ParsedDaysOfWeek {
        literals: {
            1,
            2,
            3,
            4,
            5,
            6,
            7,
        },
        last_days_of_week: {},
        nth_days_of_week: {},
        start_with_asterisk: true,
    },
    timezone: TimeZone(
        UTC,
    ),
}
